--- a/Css/finanzas.css
+++ b/Css/finanzas.css
@@ -120,7 +120,7 @@ h2 {
 
 /* Estilos para métricas */
 .metrics-box {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .metric-item {
@@ -138,7 +138,7 @@ h2 {
 /* Estilos para gráficos */
 .chart {
     margin-top: 1rem;
-    height: 200px;
+    height: 150px;
     position: relative;
 }
 
@@ -177,16 +177,19 @@ h2 {
 
 /* Gráfico de pastel */
 .pie-chart svg {
+    justify-items: center;
     width: 100%;
-    height: 100%;
+    height: 150%;
 }
 
 /* Barras verticales */
 .vertical-bars {
     display: flex;
-    align-items: flex-end;
+    align-items: end-flex;   
+    align-items: baseline; 
     justify-content: space-around;
     height: 100%;
+    width: 100%;
     gap: 5px;
 }
 
